            * tx_quickshop_products_dimension_mm
            * tx_quickshop_products_material_mm
            by
            * tx_quickshop_mm
  * #62029: Upgrade TYPO3 6.2
            * Browser 6.0
            * Foundation 5.4
            * TYPO3 6.2
              * #i0016: linkhandler fixed for TYPO3 6.2
              * #i0015: cps_tcatree fixed for TYPO3 6.2
  Improvement
  * #62037: unique uid for the view: 62037
  * #i0015: showUid is moved to itemUid

4.0.6
  2014-05-17
  Improvement
  * #i0014: Corporate design: modified icon

4.0.5
  2014-03-03
  Improvement
  * #i0013: tca.php: exclude fields are maintained
  * #i0012: ean (new)
  * #i0011: SKU isn't required
  * #i0010: SKU is required
  Bugfix
  * #i0011: inkl. MwSt. wasn't localised

4.0.4
  2014-02-06
  Feature
  * #55726: (Caddy) Stock management: decrease item quantity after ordering
            * Moving SQL fields:
              * in_stock -> stockquantity
              * stock    -> stockManagement
            Effected files:
            * static/caddy
              * constants.txt


4.0.3
  2014-01-14
  Features
  * #55002: LinkHandlerConfiguration
            ! without effect: linkhandler 0.3.1 has an error in TYPO3 6.x
            Effected files:
            * ext_tables.php
            * ext_conf_template.txt
            * ext_tables/*          ( new )
            * static/base/*         ( new )
            * tsConfig/page/*       ( new )
  * #55001: Template for Imagecycle no conflict
            Effected files:
            * static/imagecycle
              * setup.txt         ( new )
            * ext_tables.php
  * #i0009: List view: thumbnail links to single view (former: image popup)
  * #54992: Replace marker
            Effected files:
            * static
              * setup.txt

4.0.2
  2014-01-09
  Features
  * #54872: SEO: move support from Browser - TYPO3 without PHP - to SEO Dynamic Tag 2
            Effected files:
            * static
              * constants.txt